[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Plane Details.gd" type="Script" id=1]
[ext_resource path="res://Theme/MinimalUI.tres" type="Theme" id=2]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_right = 58.0
margin_bottom = 40.0
size_flags_horizontal = 3
editable = false

[node name="EditButt" type="Button" parent="."]
visible = false
margin_left = 62.0
margin_right = 93.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Edit"

[node name="SelectButt" type="Button" parent="."]
margin_left = 62.0
margin_right = 113.0
margin_bottom = 40.0
text = "Switch"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="EditButt" to="." method="_on_EditButt_pressed"]
[connection signal="pressed" from="SelectButt" to="." method="_on_SelectButt_pressed"]
